Degraded ScriptProcessorNode performance/quality for (14.0.3+ and iOS 14.4.1+) https://bugs.webkit.org/show_bug.cgi?id=223380

Reviewed by Geoffrey Garen.

By extending the scope of the lock in ScriptProcessorNode::process(), r273542 essentially
disabled double-buffering and thus negatively impacted rendering quality.

To address the issue, we now have 2 locks, one per rendering buffer (since we're using
double buffering) and only grab the lock we require when interacting with the buffers
for this index. This maintains thread-safety while re-enabling double buffering.

* Modules/webaudio/ScriptProcessorNode.cpp:
(WebCore::ScriptProcessorNode::createInputBufferForJS const):
Avoid duplicate call to topologyMatches() since copyTo() already calls it internally
and returns false when !topologyMatches().

(WebCore::ScriptProcessorNode::process):
* Modules/webaudio/ScriptProcessorNode.h:

Canonical link: https://commits.webkit.org/235418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274573 268f45cc-cd09-0410-ab3c-d52691b4dbfc